asp-grammar.txt
/* Grammar of ASP Language */

// separator
SP				:=		[ \t\r\n]
// operator
OP				:=		[+-*/.@^] SP
// function name
FN_NAME			:=		[a-z_][a-z_0-9]* SP
// definition symbol
DEF 			:=		'::' SP
// function definition symbol
FN_DEF_SYMBOL	:=		'->' SP
// atom symbol
ATOM_SYMBOL		:=		[A-Z] SP
// special symbol
SPECIAL_SYMBOL	:=		[0-9] SP
// equal
EQU				:=		'=' SP
// ;;
END             :=      ';;' SP

// definition
DEFINITION		:=		(BRACE_DEF | FN_DEF | K_DEF) SP
// brace-definables
BRACE_DEF		:=		(OP | '_') DEF '{' PROPERTY_LIST '}'
// function definition
FN_DEF			:=		FN_NAME DEF ATOM_EXPR FN_DEF_SYMBOL ATOM_EXPR END
// K definition
K_DEF			:=		'K' DEF '?'? K_GROUP?

// atom
ATOM			:=		ATOM_SYMBOL | SPECIAL_SYMBOL | ('(' ATOM_EXPR ')')
// ATOM_EXPR
ATOM_EXPR		:=		ATOM (OP ATOM)*

// property list
PROPERTY_LIST	:=		(PROPERTY SP)*
// property
PROPERTY		:=		ATOM_EXPR EQU (ATOM_EXPR | GEN_EXPR)+ END
// generator EXPR
GEN_EXPR		:=		'$' (OP | ATOM)* '$' ('#' ATOM_SYMBOL)?

// K Group
K_GROUP         :=      [A-Z] [0-9]*

// All
ALL             :=      (SP DEFINITION)*
